# tetris-opengl

./: CMakeLists.txt  Makefile  README.md
config/: playercontrolsmapping.txt
glad/include/glad/: glad.h
glad/src/: glad.c
shaders/: programs.list
shaders/fragment/: bar.frag  boardcell.frag  bolt.frag  default.frag  green.frag  l.frag  red.frag  square.frag
shaders/vertex/: default.vert  upsidedown.vert
src/: ObjectRenderer.cpp  ObjectRenderer.hpp  Rectangle.cpp  Rectangle.hpp  Triangle.cpp  Triangle.hpp  config.cpp  main.cpp  renderer.cpp  renderer.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp
src/example/: Rectangle.cpp  Rectangle.hpp  Triangle.cpp  Triangle.hpp
src/example/scene/: Game.cpp  Game.hpp
src/game/: Camera.cpp  Camera.hpp  CameraView.cpp  CameraView.hpp  Game.cpp  Game.hpp  GameObject.cpp  GameObject.hpp  GameObjectRenderer.hpp  InputHandler.hpp  Renderer.hpp  SceneState.cpp  SceneState.hpp  State.cpp  State.hpp  StateMachine.hpp  StateMachine.tpp  UserActions.cpp  UserActions.hpp  config.hpp  utils.cpp  utils.hpp
src/game/cameraView/: Fixed.cpp  Fixed.hpp  Follow.cpp  Follow.hpp  Rotate.cpp  Rotate.hpp
src/opengl/: InputHandler.cpp  InputHandler.hpp  ObjectRenderer.cpp  ObjectRenderer.hpp  OrthoCamera.cpp  OrthoCamera.hpp  PerspectiveCamera.cpp  PerspectiveCamera.hpp  Renderer.cpp  Renderer.hpp  mouse.cpp  mouse.hpp  renderer.cpp  renderer.hpp  shader.cpp  shader.hpp  texture.cpp
src/tetris/: 2DBoard.cpp  2DBoard.hpp  3DBoard.cpp  3DBoard.hpp  Board.cpp  Board.hpp  BoardCell.cpp  BoardCell.hpp  BoardSide.cpp  BoardSide.hpp  Piece.cpp  Piece.hpp  PieceFactory.cpp  PieceFactory.hpp  Rectangle.cpp  Rules.cpp  Rules.hpp  renderers.cpp  renderers.hpp
src/tetris/2D/: Board.cpp  Board.hpp
src/tetris/2D/scene/: Game.cpp  Game.hpp
src/tetris/3D/: Board.cpp  Board.hpp
src/tetris/3D/scene/: Game.cpp  Game.hpp
src/tetris/pieces/: Bar.cpp  Bar.hpp  Bolt.cpp  Bolt.hpp  InvertedL.cpp  InvertedL.hpp  L.cpp  L.hpp  Placed.cpp  Placed.hpp  S.cpp  S.hpp  Square.cpp  Square.hpp  T.cpp  T.hpp  Z.cpp  Z.hpp
src/tetris/scene/: 2DGame.cpp  2DGame.hpp  3DGame.cpp  3DGame.hpp  Game.cpp  Game.hpp  GameOver.cpp  GameOver.hpp
